style.css
:root {
  --projects-bg: #111;
  --projects-color: #fff;
  --projects-accent: #111;
  font-size: 62.5%;
  color: #111;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

h1, h2, h3, h4 {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}

ul {
  list-style: none;
}

img {
  width: 100%;
  height: 100%;
}

body, button, a {
  font-size: 1.6rem;
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.scroll-container {
  height: 100vh;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
  scroll-behavior: smooth;
  scrollbar-color: transparent;
  scrollbar-width: none;
  will-change: transform;
  -ms-overflow-style: none; 
  overflow-y: scroll;
}

.scroll-container::-webkit-scrollbar {
  display: none;
}

.header {
  min-height: 100vh;
  display: grid;
  text-align: center;
  scroll-snap-align: start;
}

.lang-link {
  margin: 0 auto;
  color: #111;
}

.headline {
  width: fit-content;
  height: fit-content;
  margin-top: 12px;
  font-size: 7.2rem;
  font-weight: 600;
  text-align: center;
  justify-self: center;
  position: relative;
  background-color: #fff;
  animation-name: reveal;
  animation-duration: .5s;
  animation-timing-function: ease-in-out;
}

.headline__label {
  width: 104px;
  height: 24px;
  padding: 18px 0 20px;  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2.4rem;
  position: absolute;
}

.headline__label_left {
  top: 0;
  margin-bottom: -1.6rem;
  z-index: -10;
}

.headline__label_right {
  right: -6px;
  bottom: -20px;
  justify-self: end;
}

.subtitle {
  width: fit-content;
  height: fit-content;
  padding: 6px 12px;
  border: 1px solid black;
  align-content: center;
  text-align: center;
  margin: 0 auto;
  font-weight: 500;
  font-size: 2.4rem;
  box-shadow: 6px 6px #111;
  animation-name: shadowToRight;
  animation-duration: .5s;
  animation-fill-mode: backwards;
  animation-timing-function: ease-in-out;
}

.subtitle_sm {
  font-size: 1.6rem;
}

.cta-container {
  width: 100%;
  padding: 0 12px;
  grid-row: 4;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 12px;
}

.cta {
  width: 120px;
  height: 40px;
  padding-top: 8px;
  border: 2px solid #111;
  border-radius: 1px;
  display: inline-block;
  text-align: center;
  font-weight: bold;
  font-size: 1.6rem;
  cursor: pointer;
  transition: box-shadow .5s;
}

.cta_primary {
  color: white;
  background-color: #272727;
  box-shadow: 6px 6px #111;
  animation-name: shadowToRight;
  animation-delay: .4s;
  animation-duration: .5s;
  animation-fill-mode: backwards;
  animation-timing-function: ease-in-out;
}

.cta_secondary {
  color: #111;
  box-shadow: -6px 6px #111;
  background-color: #fff;
  animation-name: shadowToLeft;
  animation-delay: .2s;
  animation-duration: .5s;
  animation-fill-mode: backwards;
  animation-timing-function: ease-in-out;
}

.picture-container {
  width: 89%;
  max-height: 40vh;
  justify-self: center;
  border-radius: 2px;
  position: relative;
  aspect-ratio: 3 / 4;
  animation-name: rotateClockwise;
  animation-delay: .5s;
  animation-duration: .5s;
  animation-fill-mode: forwards;
  animation-timing-function: ease-in-out;
}

.picture-container::before {
  width: 100%;
  height: 100%;
  border-radius: 2px;
  background-color: #111;
  content: " ";
  position: absolute;
  z-index: -10;
  animation-name: rotateCounterClockwise;
  animation-delay: .5s;
  animation-duration: .5s;
  animation-fill-mode: forwards;
  animation-timing-function: ease-in-out;
}

.picture {
  filter: grayscale(1);
  object-fit: cover;
  object-position: center 15%;
}

.section {
  min-height: 100vh;
  margin-top: 40px;
  padding: 0 12px;
  display: grid;
  scroll-snap-align: start;
  overflow: hidden;
}

.section_column {
  width: 100%;
  max-width: 400px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  text-align: center;
  place-content: center;
}

.section_dynamic-bg {
  background-color: var(--projects-bg);
  color: var(--projects-color);
  transition: background-color 1s;
}

.section__title {
  font-size: 5.8rem;
  font-weight: 600;
}

.project-title-container {
  min-width: 200px;
  position: relative;
  overflow: hidden;
}

.project-title {
  width: 100%;
  height: 30px;
  padding-right: 6px;
  font-size: 2rem;
  font-weight: 500;
  text-align: right;
  transition: all .3s;
  opacity: .5;
}

.project-title_selected {
  background-color: var(--projects-accent);
  color: #fff;
  font-size: 2.4rem;
  opacity: 1;
  position: relative;
}

.project-title_selected::before {
  content: "";
  position: absolute;
  top: calc(50% - 5px);
  left: 10px;
  border-radius: 1px;
  border-top: 5px solid transparent;
  border-bottom: 5px solid transparent;
  border-left: 10px solid #fff; 
}

.project-images-list {
  max-height: 40vh;
  position: relative;
  aspect-ratio: 16 / 9;
}

.project-images {
  width: 94%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  transition: all .3s;
  filter: grayscale(1);
}

.project-images_selected {
  filter: none;
  cursor: auto;
}

.project-images_slide {
  animation-name: slide;
  animation-timing-function: ease-in-out;
  animation-fill-mode: forwards;
  animation-duration: 1s;
}

.project-desktop-img {
  width: 100%;
  height: auto;
  aspect-ratio: 16 / 9;
  border-radius: 12px 12px 4px 4px;
  padding: 4px 4px 24px;
  background-image: linear-gradient(silver, #111);
  z-index: -10;
}

.project-mobile-img {
  width: auto;
  height: 80%;
  padding: 2px;
  aspect-ratio: 9 / 16;
  border-radius: 14px;
  position: absolute;
  left: 8px;
  bottom: 4px;
  background-image: linear-gradient(silver, #fff);
}

.project-description {
  height: 6vh;
  margin: 12px 0;
}

.project-description_faded {
  opacity: .1;
}

.label-container {
  height: 15vh;
  display: flex;
  align-content: end;
  align-items: end;
  flex-wrap: wrap;
  gap: 6px;
  grid-column: 1 / 2;
  transition: opacity .5s;
}

.label-container_faded {
  opacity: .1;
}

.label {
  width: 104px;
  height: 24px;
  border: 1px solid #fff;
  border-radius: 1px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.6rem;
  background-color: var(--projects-accent);
  color: white;
  z-index: 10;
}

.section__links {
  margin: 36px auto 0;
}

.section__link {
  width: 350px;
  height: 48px;
  border: 2px solid #111;
  margin: 12px 0;
  padding-left: 44px;
  display: flex;
  align-items: center;
  font-size: 1.6rem;
  font-weight: 500;
  color: #111;
  gap: 16px;
  text-decoration: none;
  background-repeat: no-repeat;
  background-position: 6px;
  background-size: 36px;
  position: relative;
}

.section__link::after {
  content: "";
  width: 24px;
  height: 24px;
  position: absolute;
  right: 6px;
  top: calc(50% - 12px);
  background-image: url('https://img.icons8.com/?size=100&id=60664&format=png&color=111111');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  transition: transform .3s;
}

.section__link_email {
  background-image: url('https://img.icons8.com/?size=100&id=Zp93Jltra4ez&format=png&color=111111');
}

.section__link_linkedin {
  background-image: url('https://img.icons8.com/?size=100&id=98960&format=png&color=111111');
}

.section__link_github {
  background-image: url('https://img.icons8.com/?size=100&id=62856&format=png&color=111111');
}

.section__link_goodreads {
  background-image: url('https://img.icons8.com/?size=100&id=106449&format=png&color=111111');
}

.link-container {
  display: flex;
  align-items: end;
  justify-content: end;
  gap: 12px;
  height: 6vh;
}

.link-container_faded {
  opacity: .1;
}

.link {
  padding: 2px 8px;
  border-radius: 1px;
  color: var(--projects-color);
  text-decoration: underline 2px var(--projects-accent);
  font-size: 1.6rem;
  font-weight: 500;
}

@media (min-width: 576px) {

  body, button, a {
    font-size: 2rem;
  }

  .header {
    overflow: hidden;
    position: relative;
  }

  .headline {
    align-self: center;
  }

  .cta-container {
    justify-content: end;
    padding-bottom: 20px;
    align-self: center;
  }

  .cta {
    width: 160px;
    height: 50px;
    padding-top: 10px;
    font-size: 2rem;
  }

  .lang-link {
    position: absolute;
    bottom: 24px;
    left: 24px;
  }

  .picture-container {
    margin: 12px;
    align-self: stretch;
    max-height: 94vh;
    justify-self: end;
    grid-row: 1 / 5;
    aspect-ratio: 9 / 16;
  }

  .section {
    grid-template-columns: 1fr 2fr;
  }

  .section__title {
    grid-column: span 2;
  }

  .section__first-pt {
    align-self: stretch;
  }

  .section__second-pt {
    padding-left: 24px;
  }

}

@media (min-width: 768px) {
  
  .headline {
    font-size: 8.4rem;
  }

  .headline__label {
    font-size: 3rem;
  }

  .header__paragraph {
    width: 430px;
    margin: 0 auto;
  }

  .section__title {
    font-size: 7rem;
  }

  .label {
    width: 120px;
    height: 32px;
    font-size: 1.8rem;
  }

  .project-title-container {
    width: 14%;
    padding-top: 28px;
  }

  .project-images-list {
    max-height: 55vh;
  }

}

@media (min-width: 1024px) {
  .headline {
    font-size: 12rem;
  }
}

@media (any-hover: hover) {
  .cta:hover, .cta:focus {
    box-shadow: 12px 12px #2576E0;
  }

  .cta_secondary:hover, .cta_secondary:focus {
    box-shadow: -12px 12px #2576E0;
  }

  .project-title:hover {
    opacity: 1;
    cursor: pointer;
    color: #111;
    background-color: #e7e7e7;
  }

  .project-title_selected:hover {
    color: #fff;
    background-color: var(--projects-accent);
    opacity: 1;
    cursor: default;
  }

  .project-images:hover {
    filter: none;
    cursor: pointer;
  }

  .project-images_selected:hover {
    cursor: auto;
  }

  .section__link:hover {
    text-decoration: underline;
    background-color: #DDD;
  }

  .section__link:hover::after {
    transform: scale(1.2);
  }

  .link:hover {
    color: #ddd;
  }

}

@keyframes slide {
  0% {
    transform: none;
  }

  50% {
    transform: translateX(900px);
  }

  100% {
    transform: none;
  }
}

@keyframes rotateClockwise {
  from {
    transform: rotate(0);
  }
  to {
    transform: rotate(2deg);
  }
}

@keyframes rotateCounterClockwise {
  from {
    transform: rotate(0);
  }
  to {
    transform: rotate(-4deg);
  }
}

@keyframes shadowToRight {
  from {
    box-shadow: none;
  }
  to {
    box-shadow: 6px 6px #111;
  }
}

@keyframes shadowToLeft {
  from {
    box-shadow: none;
  }
  to {
    box-shadow: -6px 6px #111;
  }
}

@keyframes revealUp {
  to {
    transform: translateY(-12px);
  }
}

